syntax = "proto3";
package communication;
option go_package=".;communication";
import "communication/generic.proto";

message ItemEntity {
  string id = 1;
  string contract_id = 2;
  string name = 4;   
  string current_body = 5;
  string worker_body = 6;
  string buyer_body = 7;
  bool awaiting_approval = 8;
  bool awaiting_creation = 9;
  bool awaiting_deletion = 10;

  uint32 buyer_settled = 27;

  string figma_component_id = 29;
}

message ItemNub {
  string id = 1;
  string proposer = 3;
  string name = 2;
}

message SuggestItemReq {
  string user_id = 1;
  string id = 2;
  string item_id = 4;
  string new_body = 3;
  bool doc_mode = 5;
}
message ReactItemReq {
  string user_id = 1;
  string id = 2;
  string message_id = 4;
  string item_id = 5;
  uint32 status = 3;
  bool doc_mode = 6;
}

message SuggestAddItemReq {
  string user_id = 1;
  string id = 2;
  ItemEntity item = 3;
  bool doc_mode = 4;
}
message ReactAddItemReq {
  string user_id = 1;
  string id = 2;
  string message_id = 4;
  string item_id = 3;
  uint32 status = 5;
  bool doc_mode = 6;
}

message SuggestDelItemReq {
  string user_id = 1;
  string id = 2;
  ItemEntity item = 3;
  bool doc_mode = 4;
}
message ReactDelItemReq {
  string user_id = 1;
  string id = 2;
  string message_id = 4;
  string item_id = 3;
  uint32 status = 5;
  bool doc_mode = 6;
}

message ContractSettleItemRequest {
  string user_id = 1;
  string deadline_id = 2;
  string contract_id = 3;
  string item_id = 4;
  uint32 new_state = 5;
}

service Item {

  rpc SuggestItem(SuggestItemReq) returns (NullResponse) {};
  rpc ReactItem(ReactItemReq) returns (NullResponse) {};

  rpc SuggestAddItem(SuggestAddItemReq) returns (ItemEntity) {};
  rpc ReactAddItem(ReactAddItemReq) returns (NullResponse) {};

  rpc SuggestDeleteItem(SuggestDelItemReq) returns (NullResponse) {};
  rpc ReactDeleteItem(ReactDelItemReq) returns (NullResponse) {};

  rpc SettleItem(ContractSettleItemRequest) returns (NullResponse) {};

}